Shorten DNSSEC message

--- a/templates/domain.html.jinja
+++ b/templates/domain.html.jinja
@@ -48,11 +48,11 @@
 
           {% if results.dnssec %}
           <div class="alert alert-success text-center mb-3" role="alert">
-            DNSSEC is enabled for this domain.
+            DNSSEC is enabled.
           </div>
           {% else %}
           <div class="alert alert-danger text-center mb-3" role="alert">
-            DNSSEC is not enabled for this domain.
+            DNSSEC is not enabled.
           </div>
           {% endif %}
         </div>  <!-- End padded wrapper -->
