Fix include count when SPF macros are used

--- a/templates/domain.html.jinja
+++ b/templates/domain.html.jinja
@@ -89,7 +89,16 @@
           </p>
           {% endif %}
 
-          {% if "parsed" in results.spf and (results.spf.parsed.include|length > 0 or (results.spf.parsed.redirect and results.spf.parsed.redirect.parsed.include|length > 0)) %}
+          {% if "parsed" in results.spf %}
+          {% for entry in results.spf.parsed.pass %}
+          {% if"%{" in entry.value %}
+          <div class="alert alert-info text-center" role="alert">
+          <code>{{entry.mechanism}}:{{entry.value}}</code> uses SPF macros so a server (i.e., "hosted SPF services") can dynamically indicate if an IP address should be accepted in SPF validation.
+        </div>
+          {% endif %}
+          {% endfor %}
+
+          {% if results.spf.parsed.include|length > 0 or (results.spf.parsed.redirect and results.spf.parsed.redirect.parsed.include|length > 0) %}
           <p>The following table contains a list of DNS lookups used by each include, including the include lookup itself.</p>
           <div class="table-responsive">
             <table class="table table-bordered table-striped">
@@ -100,7 +109,11 @@
               {% for include in results.spf.parsed.include %}
               <tr>
                 <td>{{include.domain}}</td>
+                {% if "%{" in include.domain %}
+                <td>{{include.dns_lookups}}</td>
+                {% else %}
                 <td>{{include.dns_lookups + 1}}</td>
+                {% endif %}
               </tr>
               {% endfor %}
               {% if results.spf.parsed.redirect %}
@@ -113,6 +126,7 @@
               {% endif %}
             </table>
           </div>
+          {% endif %}
           {% endif %}
         </div>  <!-- End padded wrapper -->
       </div>  <!-- End column -->
