--- a/templates/domain.html.jinja
+++ b/templates/domain.html.jinja
@@ -324,13 +324,27 @@
 
       <!-- MTA-STS -->
       <div class="col-lg-4">
-        <h4 class="text-center">MTA-STS</h4>
-      </div>
+        <div class="p-3 pt-0">
+          <div class="intro mb-3">
+            <h4 class="text-center">MTA-STS</h4>
+            <p>SMTP MTA Strict Transport Security (MTA-STS) is a mechanism enabling email service providers to declare their ability to receive Transport Layer Security (TLS) secure SMTP connections and to specify whether sending SMTP servers should refuse to deliver to MX hosts that do not offer TLS with a trusted server certificate.</p>
+            <p>MTA-STS is defined in <a href="https://datatracker.ietf.org/doc/html/rfc8461">RFC 8461</a>.</p>
+          </div> <!-- End intro -->
+          
+        </div> <!-- End padded wrapper -->
+      </div> <!-- End column -->
 
       <!-- SMTP TLS Reporting -->
-      <div class="col-lg-4">
-        <h4 class="text-center">SMTP TLS Reporting</h4>
-      </div>
+     <div class="col-lg-4">
+        <div class="p-3 pt-0">
+          <div class="intro mb-3">
+            <h4 class="text-center">SMTP TLS Reporting</h4>
+            <p>SMTP TLS Reporting is a reporting mechanism and format by which sending systems can share statistics and specific information about potential failures to establish encrypted channels with recipient domains. Recipient domains can then use this information to both detect potential attacks and diagnose unintentional misconfigurations.</p>
+            <p>SMTP TLS Reporting is defined in <a href="https://datatracker.ietf.org/doc/html/rfc8460">RFC 8460</a>.</p>
+          </div> <!-- End intro -->
+
+        </div> <!-- End padded wrapper -->
+      </div> <!-- End column -->
     </div> <!-- End row -->
 
     <!-- DNS Infrastructure -->
