Fix SPF description

--- a/templates/domain.html.jinja
+++ b/templates/domain.html.jinja
@@ -63,9 +63,7 @@
         <div class="p-3 pt-0">
           <div class="intro mb-3">
             <h4 class="text-center">SPF</h4>
-            <p>Sender Policy Framework (SPF) authenticates email by checking the sending email server IP address against a
-              list of domains provided in the envelope from domain. The SPF record can include other records, with up to 10
-              DNS lookups.</p>
+            <p>Sender Policy Framework (SPF) authenticates email by checking the sending email server IP address against a list of domains provided by the SPF record of the envelope from domain. The SPF record can include other records, with up to 10 DNS lookups.</p>
             <p>The SPF standard is defined in <a href="https://www.rfc-editor.org/rfc/rfc7208.html">RFC 7208</a>.</p>
           </div>
 
@@ -330,7 +328,7 @@
             <p>SMTP MTA Strict Transport Security (MTA-STS) is a mechanism enabling email service providers to declare their ability to receive Transport Layer Security (TLS) secure SMTP connections and to specify whether sending SMTP servers should refuse to deliver to MX hosts that do not offer TLS with a trusted server certificate.</p>
             <p>MTA-STS is defined in <a href="https://datatracker.ietf.org/doc/html/rfc8461">RFC 8461</a>.</p>
           </div> <!-- End intro -->
-          
+
         </div> <!-- End padded wrapper -->
       </div> <!-- End column -->
 
